--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
     <packaging>jar</packaging>
     <url>https://github.com/PickwickSoft/jheroku-keep-alive</url>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
     <dependencies>
         <dependency>
